Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
Description
There is a race condition between InnoDB undo tablespace truncation and transaction commit. The transaction is releasing the rollback segment reference prematurely.
Bug#33162828: INNODB: Assertion failure: ut0ut.cc:552 thread 140294520874752
Attachments
Issue Links
- blocks
-
MDEV-26867 Merge new release of InnoDB 5.7.36 to 10.2
-
- Closed
-
- relates to
-
MDEV-26450 Corruption due to innodb_undo_log_truncate
-
- Closed
-